--- a/App/Eventos/Pages/AddEventPage.xaml
+++ b/App/Eventos/Pages/AddEventPage.xaml
@@ -31,100 +31,109 @@
                 <Image Source="recuerdame_white" />
             </Border>
         </StackLayout>
-        
-        <StackLayout Margin="0" Spacing="15" BackgroundColor="#DDDDDD" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+
+        <StackLayout
+            Margin="0"
+            BackgroundColor="#DDDDDD"
+            HorizontalOptions="FillAndExpand"
+            Spacing="15"
+            VerticalOptions="FillAndExpand">
             <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
-            <StackLayout Margin="20,20,20,20"  IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}">
-
-                <Label
-                    Margin="0,0,0,20"
-                    FontSize="Title"
-                    Text="Crear nuevo evento"
-                    TextColor="#ABBA3C" />
-
-                <!--  Título del evento  -->
-                <Label
-                    FontSize="Medium"
-                    Text="Título"
-                    TextColor="#184159" />
-                <Entry
-                    Placeholder="Ingrese el título del evento"
-                    PlaceholderColor="#666666"
-                    Text="{Binding Title}" />
-
-                <!--  Descripción del evento  -->
-                <Label
-                    FontSize="Medium"
-                    Text="Descripción"
-                    TextColor="#184159" />
-                <Editor
-                    HeightRequest="90"
-                    Placeholder="Ingrese la descripción del evento"
-                    PlaceholderColor="#666666"
-                    Text="{Binding Description}" />
-
-                <!--  Url del evento  -->
-                <Label
-                    FontSize="Medium"
-                    Text="Url"
-                    TextColor="#184159" />
-                <Entry
-                    Placeholder="Ingrese la Url del evento"
-                    PlaceholderColor="#666666"
-                    Text="{Binding Url}" />
-
-                <!--  Fecha del evento  -->
-                <Label
-                    FontSize="Medium"
-                    Text="Fecha"
-                    TextColor="#184159" />
-                <DatePicker
-                    Date="{Binding Date}"
-                    Format="dd/MM/yyyy"
-                    TextColor="#666666" />
-
-                <!--  Zona horaria del evento  -->
-                <Label
-                    FontSize="Medium"
-                    Text="Zona Horaria"
-                    TextColor="#184159" />
-                <Picker
-                    Title="Seleccione una zona horaria"
-                    ItemsSource="{Binding Zones}"
-                    SelectedItem="{Binding SelectedZone}"
-                    TitleColor="#666666" />
-                <StackLayout
-                    HorizontalOptions="FillAndExpand"
-                    Orientation="Horizontal"
-                    Spacing="70">
+            <StackLayout Margin="20,20,20,20" IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}">
+                <Frame BackgroundColor="White" CornerRadius="20">
                     <StackLayout>
-                        <!--  Hora de inicio del evento  -->
+                        <Label
+                            Margin="0,0,0,20"
+                            FontSize="Title"
+                            Text="Crear nuevo evento"
+                            TextColor="#ABBA3C" />
+
+                        <!--  Título del evento  -->
                         <Label
                             FontSize="Medium"
-                            Text="Hora de inicio"
+                            Text="Título"
                             TextColor="#184159" />
-                        <TimePicker TextColor="#666666" Time="{Binding StartTime}" />
-                    </StackLayout>
-                    <StackLayout>
-                        <!--  Hora de fin del evento  -->
+                        <Entry
+                            Placeholder="Ingrese el título del evento"
+                            PlaceholderColor="#666666"
+                            Text="{Binding Title}" />
+
+                        <!--  Descripción del evento  -->
                         <Label
                             FontSize="Medium"
-                            Text="Hora de fin"
+                            Text="Descripción"
                             TextColor="#184159" />
-                        <TimePicker TextColor="#666666" Time="{Binding EndTime}" />
+                        <Editor
+                            HeightRequest="90"
+                            Placeholder="Ingrese la descripción del evento"
+                            PlaceholderColor="#666666"
+                            Text="{Binding Description}" />
+
+                        <!--  Url del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Url"
+                            TextColor="#184159" />
+                        <Entry
+                            Placeholder="Ingrese la Url del evento"
+                            PlaceholderColor="#666666"
+                            Text="{Binding Url}" />
+
+                        <!--  Fecha del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Fecha"
+                            TextColor="#184159" />
+                        <DatePicker
+                            Date="{Binding Date}"
+                            Format="dd/MM/yyyy"
+                            TextColor="#666666" />
+
+                        <!--  Zona horaria del evento  -->
+                        <Label
+                            FontSize="Medium"
+                            Text="Zona Horaria"
+                            TextColor="#184159" />
+                        <Picker
+                            Title="Seleccione una zona horaria"
+                            ItemsSource="{Binding Zones}"
+                            SelectedItem="{Binding SelectedZone}"
+                            TitleColor="#666666" />
+                        <StackLayout
+                            HorizontalOptions="FillAndExpand"
+                            Orientation="Horizontal"
+                            Spacing="70">
+                            <StackLayout>
+                                <!--  Hora de inicio del evento  -->
+                                <Label
+                                    FontSize="Medium"
+                                    Text="Hora de inicio"
+                                    TextColor="#184159" />
+                                <TimePicker TextColor="#666666" Time="{Binding StartTime}" />
+                            </StackLayout>
+                            <StackLayout>
+                                <!--  Hora de fin del evento  -->
+                                <Label
+                                    FontSize="Medium"
+                                    Text="Hora de fin"
+                                    TextColor="#184159" />
+                                <TimePicker TextColor="#666666" Time="{Binding EndTime}" />
+                            </StackLayout>
+                        </StackLayout>
                     </StackLayout>
-                </StackLayout>
+                </Frame>
+
 
 
                 <!--  Botón para agregar el evento  -->
 
                 <Button
-                    Margin="0,40,0,15"
+                    Margin="0,20,0,15"
                     BackgroundColor="#419387"
                     Command="{Binding AddEventCommand}"
                     CornerRadius="20"
                     Text="Guardar evento"
-                    TextColor="White" >
+                    TextColor="White">
                     <Button.Shadow>
                         <Shadow
                             Brush="#000000"
@@ -132,14 +141,14 @@
                             Radius="4"
                             Offset="0,3" />
                     </Button.Shadow>
-                    </Button>
+                </Button>
 
                 <Button
                     BackgroundColor="#D2E898"
                     Command="{Binding ClearCommand}"
                     CornerRadius="20"
                     Text="Cancelar"
-                    TextColor="#205048" >
+                    TextColor="#205048">
                     <Button.Shadow>
                         <Shadow
                             Brush="#000000"
@@ -147,7 +156,7 @@
                             Radius="4"
                             Offset="0,3" />
                     </Button.Shadow>
-                    </Button>
+                </Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
