--- a/App/Eventos/Pages/HistoryPage.xaml
+++ b/App/Eventos/Pages/HistoryPage.xaml
@@ -20,7 +20,7 @@
 
     <StackLayout BackgroundColor="#184159">
         <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
-        <StackLayout BackgroundColor="#DDDDDD" Padding="0,0,0,10">
+        <StackLayout Padding="0,0,0,10" BackgroundColor="#DDDDDD">
             <Border
                 Margin="0,-10,0,0"
                 Padding="20"
@@ -29,118 +29,122 @@
                 StrokeThickness="1">
                 <Border.StrokeShape>
                     <RoundRectangle CornerRadius="0,0,30,30" />
-                    </Border.StrokeShape>
-                    <Image Source="recuerdame_white" />
+                </Border.StrokeShape>
+                <Image Source="recuerdame_white" />
             </Border>
         </StackLayout>
-        
+
         <RefreshView Command="{Binding RefreshAsyncCommand}" IsRefreshing="{Binding IsRefreshingList}">
-            <StackLayout Padding="0,0,0,0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="#DDDDDD">
-                <CollectionView
-                Margin="20,0,20,0"
-                HorizontalOptions="FillAndExpand"
+            <StackLayout
+                Padding="0,0,0,0"
                 BackgroundColor="#DDDDDD"
-                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
-                ItemsSource="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=Events, Mode=TwoWay}"
+                HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand">
-                <CollectionView.ItemsLayout>
-                    <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10"/>
-                </CollectionView.ItemsLayout>
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="models:EventItem">
-                        <Frame Margin="0,10,0,0" BorderColor="Transparent">
-                            <Frame.Shadow>
-                                <Shadow
-                                    Brush="#000000"
-                                    Opacity="0.5"
-                                    Radius="15"
-                                    Offset="-4,4" />
-                            </Frame.Shadow>
-                            <Grid
-                                ColumnDefinitions="auto,*"
-                                HorizontalOptions="FillAndExpand"
-                                RowDefinitions="auto,auto"
-                                RowSpacing="3"
-                                VerticalOptions="Start">
-
-                                <Label
-                                    Grid.Row="0"
-                                    Grid.Column="0"
-                                    FontAttributes="Bold"
+                <CollectionView
+                    Margin="20,0,20,0"
+                    BackgroundColor="#DDDDDD"
+                    HorizontalOptions="FillAndExpand"
+                    IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
+                    ItemsSource="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=Events, Mode=TwoWay}"
+                    VerticalOptions="FillAndExpand">
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="models:EventItem">
+                            <Frame Margin="0,5,0,5" BorderColor="Transparent">
+                                <Frame.Shadow>
+                                    <Shadow
+                                        Brush="#000000"
+                                        Opacity="0.5"
+                                        Radius="15"
+                                        Offset="-4,4" />
+                                </Frame.Shadow>
+                                <Grid
+                                    ColumnDefinitions="auto,*"
                                     HorizontalOptions="FillAndExpand"
-                                    MaxLines="1"
-                                    TextColor="#61a60e">
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <Span
-                                                FontSize="22"
-                                                Text="{Binding Title}"
-                                                TextColor="#184159" />
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
+                                    RowDefinitions="auto,auto"
+                                    RowSpacing="3"
+                                    VerticalOptions="Start">
 
-                                <StackLayout
-                                    Grid.Row="1"
-                                    Grid.Column="0"
-                                    Orientation="Vertical">
                                     <Label
-                                        Margin="0,0,0,5"
-                                        MaxLines="1"
-                                        Text="{Binding Description}"
-                                        TextColor="#184159"
-                                        VerticalOptions="Start" />
-                                    <Label
-                                        Margin="0,0,6,0"
+                                        Grid.Row="0"
+                                        Grid.Column="0"
                                         FontAttributes="Bold"
-                                        FontSize="14"
-                                        TextColor="#184159">
+                                        HorizontalOptions="FillAndExpand"
+                                        MaxLines="1"
+                                        TextColor="#61a60e">
                                         <Label.FormattedText>
                                             <FormattedString>
-                                                <Span Text="{Binding Count}" />
-                                                <Span Text=" clicks " />
+                                                <Span
+                                                    FontSize="22"
+                                                    Text="{Binding Title}"
+                                                    TextColor="#184159" />
                                             </FormattedString>
                                         </Label.FormattedText>
                                     </Label>
-                                </StackLayout>
+
+                                    <StackLayout
+                                        Grid.Row="1"
+                                        Grid.Column="0"
+                                        Orientation="Vertical">
+                                        <Label
+                                            Margin="0,0,0,5"
+                                            MaxLines="1"
+                                            Text="{Binding Description}"
+                                            TextColor="#184159"
+                                            VerticalOptions="Start" />
+                                        <Label
+                                            Margin="0,0,6,0"
+                                            FontAttributes="Bold"
+                                            FontSize="14"
+                                            TextColor="#184159">
+                                            <Label.FormattedText>
+                                                <FormattedString>
+                                                    <Span Text="{Binding Count}" />
+                                                    <Span Text=" clicks " />
+                                                </FormattedString>
+                                            </Label.FormattedText>
+                                        </Label>
+                                    </StackLayout>
 
 
-                                <ImageButton
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    Margin="0,0,6,0"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=CopyTextAsyncCommand}"
-                                    CommandParameter="{Binding URLFile}"
-                                    HeightRequest="45"
-                                    HorizontalOptions="End"
-                                    Source="link"
-                                    WidthRequest="45" />
+                                    <ImageButton
+                                        Grid.Row="0"
+                                        Grid.Column="1"
+                                        Margin="0,0,6,0"
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HistoryViewModel}}, Path=CopyTextAsyncCommand}"
+                                        CommandParameter="{Binding URLFile}"
+                                        HeightRequest="45"
+                                        HorizontalOptions="End"
+                                        Source="link"
+                                        WidthRequest="45" />
 
-                                <ImageButton
-                                    Grid.Row="1"
-                                    Grid.Column="1"
-                                    Margin="0,0,6,0"
-                                    Clicked="ImageButton_Clicked"
-                                    HeightRequest="45"
-                                    HorizontalOptions="End"
-                                    Source="eye"
-                                    VerticalOptions="End"
-                                    WidthRequest="45" />
-                            </Grid>
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-                <CollectionView.EmptyView>
-                    <Label
-                        FontSize="20"
-                        HorizontalOptions="Center"
-                        Text="No hay eventos"
-                        TextColor="#61a60e"
-                        VerticalOptions="CenterAndExpand" />
-                </CollectionView.EmptyView>
-            </CollectionView>
+                                    <ImageButton
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        Margin="0,0,6,0"
+                                        Clicked="ImageButton_Clicked"
+                                        HeightRequest="45"
+                                        HorizontalOptions="End"
+                                        Source="eye"
+                                        VerticalOptions="End"
+                                        WidthRequest="45" />
+                                </Grid>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                    <CollectionView.EmptyView>
+                        <Label
+                            FontSize="20"
+                            HorizontalOptions="Center"
+                            Text="No hay eventos"
+                            TextColor="#61a60e"
+                            VerticalOptions="CenterAndExpand" />
+                    </CollectionView.EmptyView>
+                </CollectionView>
             </StackLayout>
-            
+
         </RefreshView>
     </StackLayout>
 
