--- a/App/Eventos/Pages/HomePage.xaml
+++ b/App/Eventos/Pages/HomePage.xaml
@@ -15,32 +15,33 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <local:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+            <local:IsoDateToFormattedDateConverter x:Key="IsoDateToFormattedDateConverter" />
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <StackLayout BackgroundColor="#184159">
         <StackLayout BackgroundColor="#DDDDDD">
-        <Border
-            Margin="0,-10,0,0"
-            Padding="20"
-            BackgroundColor="#184159"
-            Stroke="#184159"
-            StrokeThickness="1">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="0,0,30,30" />
-            </Border.StrokeShape>
-            <Image Source="recuerdame_white" />
-        </Border>
+            <Border
+                Margin="0,-10,0,0"
+                Padding="20"
+                BackgroundColor="#184159"
+                Stroke="#184159"
+                StrokeThickness="1">
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="0,0,30,30" />
+                </Border.StrokeShape>
+                <Image Source="recuerdame_white" />
+            </Border>
         </StackLayout>
-        
+
         <RefreshView Command="{Binding LoadDataCommand}" IsRefreshing="{Binding IsRefreshingList}">
-            <ScrollView VerticalOptions="FillAndExpand" BackgroundColor="#DDDDDD">
+            <ScrollView BackgroundColor="#DDDDDD" VerticalOptions="FillAndExpand">
                 <StackLayout HorizontalOptions="FillAndExpand">
                     <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
                     <Label
                         Grid.Row="0"
                         Grid.Column="0"
-                        Margin="20,20,0,0"
+                        Margin="20,25,0,0"
                         FontAttributes="Bold"
                         HorizontalOptions="FillAndExpand"
                         MaxLines="1">
@@ -80,7 +81,7 @@
                                     BackgroundColor="Transparent"
                                     HeightRequest="40"
                                     HorizontalOptions="FillAndExpand"
-                                    Progress="0.7"
+                                    Progress="{Binding Progres}"
                                     ProgressColor="#D2E898"
                                     VerticalOptions="Center">
                                     <ProgressBar.Background>
@@ -97,8 +98,6 @@
 
                     </Grid>
                     <Label
-                        Grid.Row="0"
-                        Grid.Column="0"
                         Margin="25,0,0,0"
                         FontAttributes="Bold"
                         HorizontalOptions="FillAndExpand"
@@ -107,7 +106,7 @@
                             <FormattedString>
                                 <Span
                                     FontSize="16"
-                                    Text="Click: "
+                                    Text="Clicks: "
                                     TextColor="#184159" />
                                 <Span
                                     FontSize="16"
@@ -125,51 +124,172 @@
                         </Label.FormattedText>
                     </Label>
 
+                    <Frame
+                        Margin="20,15,20,15"
+                        BorderColor="Transparent"
+                        IsVisible="{Binding IsVisibleNextEvent}">
+                        <Frame.Shadow>
+                            <Shadow
+                                Brush="#000000"
+                                Opacity="0.5"
+                                Radius="15"
+                                Offset="-4,4" />
+                        </Frame.Shadow>
+                        <Grid
+                            ColumnDefinitions="auto,*"
+                            HorizontalOptions="FillAndExpand"
+                            RowDefinitions="auto,auto,auto,auto"
+                            RowSpacing="3"
+                            VerticalOptions="Start">
 
-                    <Label
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Margin="25,25,0,0"
-                        FontAttributes="Bold"
-                        HorizontalOptions="FillAndExpand"
-                        MaxLines="1">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span
-                                    FontSize="24"
-                                    Text="Metricas"
-                                    TextColor="#184159" />
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
+                            <Label
+                                FontAttributes="Bold"
+                                HorizontalOptions="FillAndExpand"
+                                MaxLines="1"
+                                TextColor="#61a60e">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="22"
+                                            Text="Proximo evento"
+                                            TextColor="#61a60e" />
+                                        <Span
+                                            FontSize="22"
+                                            Text=": "
+                                            TextColor="#61a60e" />
+                                        <Span
+                                            FontSize="22"
+                                            Text="{Binding NextEvent.Date, StringFormat='{0:dd/MM/yyyy}'}"
+                                            TextColor="#61a60e" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
 
-                    <StackLayout Margin="25,0,25,0" Spacing="5">
-                        <Label Text="Click por dia:" TextColor="#184159" />
-                        <charts:ChartView
-                            Chart="{Binding Charts[0]}"
-                            HeightRequest="300"
-                            VerticalOptions="CenterAndExpand" />
-                        <Label Text="Click ultimo evento" TextColor="#184159" />
-                        <charts:ChartView
-                            Chart="{Binding Charts[1]}"
-                            HeightRequest="300"
-                            VerticalOptions="CenterAndExpand" />
-                        <Label Text="Click por mes:" TextColor="#184159" />
-                        <charts:ChartView
-                            Chart="{Binding Charts[2]}"
-                            HeightRequest="300"
-                            VerticalOptions="CenterAndExpand" />
-                        <Label Text="Click por año" TextColor="#184159" />
-                        <charts:ChartView
-                            Chart="{Binding Charts[3]}"
-                            HeightRequest="300"
-                            VerticalOptions="CenterAndExpand" />
-                        <Label Text="Click totales" TextColor="#184159" />
-                        <charts:ChartView
-                            Chart="{Binding Charts[4]}"
-                            HeightRequest="300"
-                            VerticalOptions="CenterAndExpand" />
-                    </StackLayout>
+                            <Label
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                FontAttributes="Bold"
+                                HorizontalOptions="FillAndExpand"
+                                MaxLines="1"
+                                TextColor="#61a60e">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="22"
+                                            Text="{Binding NextEvent.Title}"
+                                            TextColor="#184159" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+
+                            <StackLayout
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Orientation="Vertical">
+                                <Label
+                                    Margin="0,0,0,5"
+                                    MaxLines="1"
+                                    Text="{Binding NextEvent.Description}"
+                                    TextColor="#184159"
+                                    VerticalOptions="Start" />
+                                <Label
+                                    Margin="0,0,6,0"
+                                    FontAttributes="Bold"
+                                    FontSize="14"
+                                    TextColor="#184159">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{Binding NextEvent.Count}" />
+                                            <Span Text=" clicks " />
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+                            </StackLayout>
+                            <StackLayout
+                                Grid.Row="3"
+                                Grid.Column="0"
+                                Margin="0,8,0,0">
+                                <charts:ChartView
+                                    Chart="{Binding Charts[0]}"
+                                    HeightRequest="250"
+                                    VerticalOptions="CenterAndExpand" />
+                            </StackLayout>
+                        </Grid>
+                    </Frame>
+
+                    <Frame Margin="20,15,20,0">
+                        <StackLayout>
+                            <Label
+                                FontAttributes="Bold"
+                                HorizontalOptions="FillAndExpand"
+                                MaxLines="1">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="24"
+                                            Text="Clics por evento:"
+                                            TextColor="#184159" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                            <Frame Padding="0" Margin="0,10,0,0" BorderColor="Transparent" BackgroundColor="#DDDDDD">
+                               <Picker
+                                BackgroundColor="#DDDDDD"
+                                ItemsSource="{Binding Events}"
+                                Title="{Binding SelectedEvent.Title}"
+                                SelectedItem="{Binding SelectedEvent}"
+                                TextColor="#184159"
+                                SelectedIndexChanged="Picker_SelectedIndexChanged"
+                                TitleColor="#184159" /> 
+                            </Frame>
+                            
+
+                            <StackLayout Spacing="5">
+
+                                <ScrollView Orientation="Horizontal">
+                                    <Grid>
+                                        <charts:ChartView
+                                            Chart="{Binding Charts[1]}"
+                                            HeightRequest="300"
+                                            VerticalOptions="CenterAndExpand"
+                                            WidthRequest="1000" />
+                                    </Grid>
+                                </ScrollView>
+                            </StackLayout>
+                        </StackLayout>
+                    </Frame>
+
+                    <Frame Margin="20,20,20,20">
+                        <StackLayout>
+                            <Label
+                                FontAttributes="Bold"
+                                HorizontalOptions="FillAndExpand"
+                                MaxLines="1">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="24"
+                                            Text="Clics totales:"
+                                            TextColor="#184159" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+
+                            <StackLayout Margin="0,10,0,0" Spacing="5">
+
+                                <ScrollView Orientation="Horizontal">
+                                    <Grid>
+                                        <charts:ChartView
+                                            Chart="{Binding Charts[2]}"
+                                            HeightRequest="300"
+                                            VerticalOptions="CenterAndExpand"
+                                            WidthRequest="1000" />
+                                    </Grid>
+                                </ScrollView>
+                            </StackLayout>
+                        </StackLayout>
+                    </Frame>
+
                 </StackLayout>
             </ScrollView>
         </RefreshView>
