--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -19,8 +19,8 @@
 
     <StackLayout BackgroundColor="#184159">
         <StackLayout BackgroundColor="#DDDDDD">
-           <Border
-            Margin="0,-10,0,0"
+            <Border
+                Margin="0,-10,0,0"
                 Padding="20"
                 BackgroundColor="#184159"
                 Stroke="#184159"
@@ -31,7 +31,7 @@
                 <Image Source="recuerdame_white" />
             </Border>
         </StackLayout>
-       
+
 
         <ActivityIndicator
             HeightRequest="32"
@@ -40,108 +40,244 @@
             VerticalOptions="Center"
             WidthRequest="32" />
         <StackLayout
-            BackgroundColor="#DDDDDD"
             Padding="30,0"
-            IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
+            BackgroundColor="#DDDDDD"
+            IsVisible="{Binding IsEditUserData, Converter={StaticResource InvertedBoolConverter}}"
             Spacing="25"
             VerticalOptions="FillAndExpand">
 
-            <Label
-                Margin="0,20,0,0"
-                FontAttributes="Bold"
-                FontSize="20"
-                Text="Cuenta:"
-                TextColor="#184159" />
+            <Frame
+                Margin="0,50,0,0"
+                BackgroundColor="White"
+                CornerRadius="20">
+                <Label
+                    FontSize="20"
+                    Text="{Binding User.FullName}"
+                    TextColor="#ABBA3C" />
+
+            </Frame>
+            <Frame
+                Margin="0,10,0,0"
+                BackgroundColor="White"
+                CornerRadius="20">
+                <StackLayout>
+                    <Label
+                        Margin="0,0,0,0"
+                        FontAttributes="Bold"
+                        FontSize="20"
+                        Text="Correo electronico"
+                        TextColor="#184159" />
 
 
-            <Label
-                Margin="25,0,0,0"
-                HorizontalOptions="FillAndExpand"
-                MaxLines="1">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <Span
-                            FontSize="16"
-                            Text="- "
-                            TextColor="#184159" />
-                        <Span
-                            FontSize="16"
-                            Text="{Binding User.Email}"
-                            TextColor="#184159" />
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
+                    <Label
+                        Margin="0,0,0,0"
+                        HorizontalOptions="FillAndExpand"
+                        MaxLines="1">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span
+                                    FontSize="16"
+                                    Text="{Binding User.Email}"
+                                    TextColor="#666666" />
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                    <StackLayout Orientation="Horizontal">
+                        <StackLayout>
+                            <Label
+                                Margin="0,20,0,0"
+                                FontAttributes="Bold"
+                                FontSize="20"
+                                Text="Estado"
+                                TextColor="#184159" />
 
-            <Label
-                Margin="25,0,0,0"
-                HorizontalOptions="FillAndExpand"
-                MaxLines="1">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <Span
-                            FontSize="16"
-                            Text="- Estado: "
-                            TextColor="#184159" />
-                        <Span
-                            FontSize="16"
-                            Text="{Binding User.State}"
-                            TextColor="#184159" />
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
+                            <Label
+                                Margin="0,0,0,0"
+                                HorizontalOptions="FillAndExpand"
+                                MaxLines="1">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="16"
+                                            Text="{Binding User.State}"
+                                            TextColor="#666666" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+                        <StackLayout Margin="50,0,0,0">
 
-            <Label
-                Margin="25,0,0,0"
-                HorizontalOptions="FillAndExpand"
-                MaxLines="1">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <Span
-                            FontSize="16"
-                            Text="- "
-                            TextColor="#184159" />
-                        <Span
-                            FontSize="16"
-                            Text="{Binding User.Plan}"
-                            TextColor="#184159" />
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
+                            <Label
+                                Margin="0,20,0,0"
+                                FontAttributes="Bold"
+                                FontSize="20"
+                                Text="Valido hasta"
+                                TextColor="#184159" />
 
-            <Label
-                Margin="25,0,0,0"
-                HorizontalOptions="FillAndExpand"
-                MaxLines="1">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <Span
-                            FontSize="16"
-                            Text="- Proximo vencimiento "
-                            TextColor="#184159" />
-                        <Span
-                            FontSize="16"
-                            Text="{Binding User.PlanInfo}"
-                            TextColor="#184159" />
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
+                            <Label
+                                Margin="0,0,0,0"
+                                HorizontalOptions="FillAndExpand"
+                                MaxLines="1">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span
+                                            FontSize="16"
+                                            Text="{Binding User.PlanInfo}"
+                                            TextColor="#666666" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+                    </StackLayout>
+
+                    <Label
+                        Margin="0,20,0,0"
+                        FontAttributes="Bold"
+                        FontSize="20"
+                        Text="Plan"
+                        TextColor="#184159" />
+                    <Label
+                        Margin="0,0,0,0"
+                        HorizontalOptions="FillAndExpand"
+                        MaxLines="1">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span
+                                    FontSize="16"
+                                    Text="{Binding User.Plan}"
+                                    TextColor="#666666" />
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                </StackLayout>
+
+            </Frame>
+
 
             <Button
-                Margin="0,10,0,40"
+                Margin="0,10,0,0"
+                BackgroundColor="#DDDDDD"
+                BorderColor="#ABBA3C"
+                BorderWidth="2"
+                Command="{Binding EditUserDataCommand}"
+                CornerRadius="20"
+                Text="Editar datos"
+                TextColor="#ABBA3C"
+                VerticalOptions="EndAndExpand">
+                <Button.Shadow>
+                    <Shadow
+                        Brush="#000000"
+                        Opacity="0.6"
+                        Radius="4"
+                        Offset="0,3" />
+                </Button.Shadow>
+            </Button>
+
+            <Button
+                Margin="0,0,0,40"
                 BackgroundColor="#419387"
                 Command="{Binding LogoutCommand}"
                 CornerRadius="20"
                 Text="Cerrar sesion"
                 TextColor="White"
-                VerticalOptions="EndAndExpand" >
+                VerticalOptions="End">
                 <Button.Shadow>
-                        <Shadow
-                            Brush="#000000"
-                            Opacity="0.6"
-                            Radius="4"
-                            Offset="0,3" />
-                    </Button.Shadow>
-                </Button>
+                    <Shadow
+                        Brush="#000000"
+                        Opacity="0.6"
+                        Radius="4"
+                        Offset="0,3" />
+                </Button.Shadow>
+            </Button>
+
+        </StackLayout>
+        <StackLayout
+            Padding="30,0"
+            BackgroundColor="#DDDDDD"
+            IsVisible="{Binding IsEditUserData}"
+            Spacing="25"
+            VerticalOptions="FillAndExpand">
+
+            <Frame
+                Margin="0,30,0,0"
+                BackgroundColor="White"
+                CornerRadius="20">
+                <StackLayout>
+                    <Frame BorderColor="Transparent">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            FontSize="14"
+                            Placeholder="Nombre"
+                            Text="{Binding NewUserName}"
+                            TextColor="#184159" />
+                    </Frame>
+
+                    <Frame BorderColor="Transparent">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            FontSize="14"
+                            Placeholder="Contaseña actual"
+                            Text="{Binding Password}"
+                            TextColor="#184159" />
+                    </Frame>
+
+                    <Frame BorderColor="Transparent">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            FontSize="14"
+                            Placeholder="Nueva contraseña"
+                            Text="{Binding NewPassword}"
+                            TextColor="#184159" />
+                    </Frame>
+
+                    <Frame BorderColor="Transparent">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            FontSize="14"
+                            Placeholder="Confirmar nueva contraseña"
+                            Text="{Binding RepeatNewPassword}"
+                            TextColor="#184159" />
+                    </Frame>
+                </StackLayout>
+
+            </Frame>
+
+
+            <Button
+                Margin="0,10,0,0"
+                BackgroundColor="Transparent"
+                BorderColor="#419387"
+                BorderWidth="2"
+                Command="{Binding EditUserDataCommand}"
+                CornerRadius="20"
+                Text="Volver"
+                TextColor="#419387"
+                VerticalOptions="EndAndExpand">
+                <Button.Shadow>
+                    <Shadow
+                        Brush="#000000"
+                        Opacity="0.6"
+                        Radius="4"
+                        Offset="0,3" />
+                </Button.Shadow>
+            </Button>
+
+            <Button
+                Margin="0,0,0,40"
+                BackgroundColor="#ABBA3C"
+                Command="{Binding ChangeUserDataCommand}"
+                CornerRadius="20"
+                Text="Guardar cambios"
+                TextColor="#205048"
+                VerticalOptions="End">
+                <Button.Shadow>
+                    <Shadow
+                        Brush="#000000"
+                        Opacity="0.6"
+                        Radius="4"
+                        Offset="0,3" />
+                </Button.Shadow>
+            </Button>
 
         </StackLayout>
     </StackLayout>
