--- a/App/Eventos/Pages/HomePage.xaml
+++ b/App/Eventos/Pages/HomePage.xaml
@@ -66,28 +66,28 @@
 
                         <!--  Contenedor con un fondo y bordes redondeados  -->
                         <Frame
+                            Margin="0,10,20,0"
                             Padding="0"
                             BackgroundColor="#184159"
                             BorderColor="#D2E898"
                             CornerRadius="15"
                             HasShadow="False"
-                            HeightRequest="40"
-                            HorizontalOptions="Start"
-                            WidthRequest="340">
+                            HeightRequest="25"
+                            HorizontalOptions="FillAndExpand">
 
                             <Grid>
                                 <!--  Progreso animado con gradiente y efectos de brillo  -->
                                 <ProgressBar
                                     BackgroundColor="Transparent"
-                                    HeightRequest="40"
+                                    HeightRequest="25"
                                     HorizontalOptions="FillAndExpand"
                                     Progress="{Binding Progres}"
-                                    ProgressColor="#D2E898"
+                                    ProgressColor="#184159"
                                     VerticalOptions="Center">
                                     <ProgressBar.Background>
                                         <!--  Efecto de fondo degradado  -->
                                         <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
-                                            <GradientStop Offset="0.0" Color="#184159" />
+                                            <GradientStop Offset="0.0" Color="#D2E898" />
                                             <GradientStop Offset="1.0" Color="#D2E898" />
                                         </LinearGradientBrush>
                                     </ProgressBar.Background>
@@ -136,7 +136,7 @@
                                 Offset="-4,4" />
                         </Frame.Shadow>
                         <Grid
-                            ColumnDefinitions="auto,*"
+                            ColumnDefinitions="*"
                             HorizontalOptions="FillAndExpand"
                             RowDefinitions="auto,auto,auto,auto"
                             RowSpacing="3"
@@ -208,12 +208,20 @@
                             <StackLayout
                                 Grid.Row="3"
                                 Grid.Column="0"
-                                Margin="0,8,0,0">
-                                <charts:ChartView
-                                    Chart="{Binding Charts[0]}"
-                                    HeightRequest="250"
-                                    VerticalOptions="CenterAndExpand" />
+                                Margin="0,10,0,0"
+                                Spacing="5">
+                                <ScrollView HorizontalScrollBarVisibility="Never" Orientation="Horizontal">
+                                    <Grid>
+                                        <charts:ChartView
+                                            x:Name="nexteventclicks"
+                                            Chart="{Binding Charts[0], Mode=TwoWay}"
+                                            HeightRequest="250"
+                                            VerticalOptions="CenterAndExpand"
+                                            WidthRequest="{Binding NextEventWidth}" />
+                                    </Grid>
+                                </ScrollView>
                             </StackLayout>
+
                         </Grid>
                     </Frame>
 
@@ -227,32 +235,50 @@
                                     <FormattedString>
                                         <Span
                                             FontSize="24"
-                                            Text="Clics por evento:"
-                                            TextColor="#184159" />
+                                            Text="Clicks por evento:"
+                                            TextColor="#61a60e" />
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-                            <Frame Padding="0" Margin="0,10,0,0" BorderColor="Transparent" BackgroundColor="#DDDDDD">
-                               <Picker
+
+                            <Label
+                                Margin="3,10,0,0"
+                                FontAttributes="Bold"
+                                FontSize="14"
+                                TextColor="#184159">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <Span Text="Seleccionar evento:" />
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+
+                            <Frame
+                                Margin="0,0,0,20"
+                                Padding="0"
                                 BackgroundColor="#DDDDDD"
-                                ItemsSource="{Binding Events}"
-                                Title="{Binding SelectedEvent.Title}"
-                                SelectedItem="{Binding SelectedEvent}"
-                                TextColor="#184159"
-                                SelectedIndexChanged="Picker_SelectedIndexChanged"
-                                TitleColor="#184159" /> 
+                                BorderColor="Transparent">
+                                <Picker
+                                    Title="{Binding SelectedEvent.Title}"
+                                    BackgroundColor="#DDDDDD"
+                                    ItemsSource="{Binding Events}"
+                                    SelectedIndexChanged="Picker_SelectedIndexChanged"
+                                    SelectedItem="{Binding SelectedEvent}"
+                                    TextColor="#184159"
+                                    TitleColor="#184159" />
                             </Frame>
-                            
+
 
                             <StackLayout Spacing="5">
 
-                                <ScrollView Orientation="Horizontal">
+                                <ScrollView HorizontalScrollBarVisibility="Never" Orientation="Horizontal">
                                     <Grid>
                                         <charts:ChartView
-                                            Chart="{Binding Charts[1]}"
+                                            x:Name="clicksbyevent"
+                                            Chart="{Binding Charts[1], Mode=TwoWay}"
                                             HeightRequest="300"
                                             VerticalOptions="CenterAndExpand"
-                                            WidthRequest="1000" />
+                                            WidthRequest="{Binding SelectedEventWidth}" />
                                     </Grid>
                                 </ScrollView>
                             </StackLayout>
@@ -269,21 +295,22 @@
                                     <FormattedString>
                                         <Span
                                             FontSize="24"
-                                            Text="Clics totales:"
-                                            TextColor="#184159" />
+                                            Text="Clicks totales:"
+                                            TextColor="#61a60e" />
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
 
                             <StackLayout Margin="0,10,0,0" Spacing="5">
 
-                                <ScrollView Orientation="Horizontal">
+                                <ScrollView HorizontalScrollBarVisibility="Never" Orientation="Horizontal">
                                     <Grid>
                                         <charts:ChartView
+                                            x:Name="TotalClicks"
                                             Chart="{Binding Charts[2]}"
                                             HeightRequest="300"
                                             VerticalOptions="CenterAndExpand"
-                                            WidthRequest="1000" />
+                                            WidthRequest="{Binding TotalEventWidth}" />
                                     </Grid>
                                 </ScrollView>
                             </StackLayout>
